# quantitativefinancelib

./: .gitignore  LICENSE  README.md  ReleaseNotes.md
examples/Python/: qflib-examples.ipynb  qflib-examples.py
pyqflib/: CMakeLists copy.txt  pyfunctions0.hpp  pyfunctions1.hpp  pymodule.cpp  pyproject.toml
pyqflib/qflib/: __init__.py  pyqflib.dylib
qflib/: exception.hpp
qflib/math/stats/: univariatedistribution.hpp
qflib/pricers/: simplepricers.cpp  simplepricers.hpp
